Added google analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Staffo</title>
 
+    <meta name="google-site-verification" content="3EpO1O99fA1Y53lX4XPO5aU9WdMVYuYw0w3AwWD7McY" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
